--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reract-repo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://masamsonenko.github.io/reract-repo/",
+  "homepage": "https://msamsonenko.github.io/reract-repo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
